# Shiro

./: README.md  index.html  package-lock.json  package.json
.claude/: launch.json
scripts/: dev-reset-permissions.sh
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  commands.rs  db.rs  lib.rs  mac_input.rs  main.rs  storage.rs
